fix(v1.10.0): fix vertical ellipsis under content bleeding
When selecting the ellipsis on the accordion, for instance, when having
multiple accordion items, you'd see the button that is on the rows
underneath display on top of the paragraphs action section. This fixes
this to be above it and not show through.

--- a/css/layout-builder.css
+++ b/css/layout-builder.css
@@ -311,3 +311,11 @@ div[data-drupal-selector="edit-block-form"] {
   color: var(--gin-color-text);
   background: var(--gin-bg-secondary);
 }
+
+/**
+ * The header for some reason was allowing the z-index of the table cells to
+ * show above it.
+ */
+th.field-label {
+  z-index: 105;
+}
